# Web1.1.Home_work__14

./: .env  3.0.0  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test.py
docs/source/: conf.py  index.rst
migrations/versions/: 628c6972cf14_users.py  72cc1dfca84d_init.py
src/: cash.py  schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_unit_repository_contacts.py
